feat: remove otel dependency from usecase and replace it with telemetry interface feat: move adapter folder to infrastructure since infrastructure folder is present fix: fix a bug where appointment booking return 0 row since the slot have been booked return slq: No row found errors instead of 409 status
