# docs/swagger.json
@@ -96,6 +96,12 @@
                             "$ref": "#/definitions/httpHandler.errorResponse"
                         }
                     },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/httpHandler.errorResponse"
+                        }
+                    },
                     "422": {
                         "description": "Unprocessable Entity",
                         "schema": {
